enhance job experience description's parsing

--- a/code/resume_generation/data/generated_resumes/output_resume.tex
+++ b/code/resume_generation/data/generated_resumes/output_resume.tex
@@ -135,11 +135,10 @@
     \section{Experience}
       \resumeSubHeadingListStart
 
-        \resumeSubheading{{Job Experience}}{{June 2020 -- Present}}
-          {{Senior Software Engineer at Dyson}}{{}}
+        \resumeSubheading{{Senior Software Engineer}}{{June 2020 -- Present}}
+          {{Dyson}}{{}}
           \resumeItemListStart
-          \resumeItem{{**Senior Software Engineer at Dyson** }}
-      \resumeItem{{Developed and maintained software solutions for Dyson's innovative products, focusing on embedded systems and IoT technologies. }}
+          \resumeItem{{Developed and maintained software solutions for Dyson's innovative products, focusing on embedded systems and IoT technologies. }}
       \resumeItem{{Collaborated with cross-functional teams to integrate hardware and software components seamlessly. }}
       \resumeItem{{Implemented agile methodologies to ensure timely delivery of high-quality software updates. }}
       \resumeItem{{Conducted thorough testing and debugging to enhance product performance and reliability. }}
