clean cv generation

--- a/code/resume_generation/data/generated_resumes/output_resume.tex
+++ b/code/resume_generation/data/generated_resumes/output_resume.tex
@@ -113,9 +113,9 @@
 
     \begin{center}
         \textbf{\Huge \scshape Jake Ryan } \\ \vspace{1pt}
-        \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{ Jake Ryan@gmail.com }} $|$ 
-        \href{https://linkedin.com/in/...}{\underline{ linkedin.com/in/Jake Ryan }} $|$
-        \href{https://github.com/...}{\underline{ github.com/Jake Ryan }}
+        \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{ Jake.Ryan@gmail.com }} $|$ 
+        \href{https://linkedin.com/in/...}{\underline{ linkedin.com/in/JakeRyan }} $|$
+        \href{https://github.com/...}{\underline{ github.com/JakeRyan }}
     \end{center}
 
     %-----------EDUCATION-----------
