--- a/code/resume_generation/data/generated_resumes/output_resume.tex
+++ b/code/resume_generation/data/generated_resumes/output_resume.tex
@@ -160,7 +160,7 @@
 
 
     %-----------PROJECTS-----------
-    \section{Projects}
+    \section{Volunteering}
         \resumeSubHeadingListStart
         
          \resumeProjectHeading{{ \textbf{{Volunteering Experience at African Impact}} }}{{June 2020 -- Present}}
