--- a/code/resume_generation/data/tex_template.tex
+++ b/code/resume_generation/data/tex_template.tex
@@ -149,7 +149,7 @@
 
 
     %-----------PROJECTS-----------
-    \section{{Projects}}
+    \section{{Volunteering}}
         \resumeSubHeadingListStart
         
         {association}
